--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "helmet": "^3.21.1",
-    "immutable": "^3.8.2",
     "isomorphic-unfetch": "^3.0.0",
     "jwt-decode": "^2.2.0",
     "luxon": "^1.3.3",
@@ -54,8 +53,8 @@
     "react-dom": "^16.12.0",
     "react-infinite-scroller": "^1.2.2",
     "react-use": "^14.0.0",
-    "rich-markdown-editor": "^9.11.0",
-    "sitemap": "^6.0.0",
+    "rich-markdown-editor": "^10.0.0-14",
+    "sitemap": "^6.1.3",
     "snyk": "^1.319.2",
     "use-auth0-hooks": "^0.7.0"
   },
